crates/aranya-policy-compiler/tests/data/misc/count_up_to_zero_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
3 |     let x = count_up_to 0 Foo[i:?]
  |                         ^ count limit must be greater than zero
